@@ -324,11 +324,6 @@ div.tracklist-label {
     border-right: 1px solid #555;
 }
 
-a.feature-label {
-    color: black;
-}
-
-
 /* .dojoDndItemSelected, .dojoDndItemAnchor { */
 /*     background: rgba( 220, 220, 255, 0.8); */
 /* } */
@@ -347,6 +342,7 @@ div.tracklist-container {
     padding-bottom: 2px;
 }
 
+/* styles for feature labels */
 .feature-label {
     position: absolute;
     border: 0px;
@@ -357,6 +353,13 @@ div.tracklist-container {
     white-space: nowrap;
     z-index: 10;
     cursor: pointer;
+}
+a.feature-label {
+    color: black;
+}
+.feature-description {
+    color: blue;
+    margin-top: -0.2em;
 }
 
 .rubber-highlight {
